integrated backend and frontend (completed locally)

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -72,6 +72,6 @@
         </div>
       </div>
     </div>
-    <script src="public\controller.js"></script>
+    <script type="text/javascript" src="./controller.js"></script>
   </body>
 </html>
